[package]
name = "pza-plugin-hantek"
edition = "2021"
version = "0.1.1"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]

# The panduza core library
panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", tag = "0.2.3", features = [
    "usb",
] }
# The panduza connectors library
# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }
# Json serialization & deserialization
serde_json = "1.0.114"
# Async trait support
async-trait = "0.1.77"
# Futures support
futures = "0.3.17"
#
strum_macros = "0.26"

[package.metadata.cargo-post.dependencies]
# Only for env paths
panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", tag = "0.1.6" }

[build-dependencies]
# 
prost-build = { version = "0.13.1" }

[features]

# Enable this if you want to build this driver as a dynamic plugin
# 
plugin = []
